se agrego un h3, p, img, y se modifico el style.css section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 	<main>
 		<section>
 			<!-- Compañero 1. Agregar un "h3", un "p" y un "img" -->
+			<h3>Subtitulo</h3>
+			<p>
+				Lorem, ipsum dolor.
+			</p>
+			<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fes%2Fimages%2Fsearch%2Fle%25C3%25B3n%2F&psig=AOvVaw0dsYYdNO7PcuOtuQozmtNo&ust=1681820055014000&source=images&cd=vfe&ved=0CA4QjRxqFwoTCODCvJTysP4CFQAAAAAdAAAAABAD" alt="Loenfacha">
 		</section>
 		<section>
 			<!-- Compañero 2. Agregar un "h3", un "p" y un "img" -->
