se agrego una imagen de un leon blanco y los derechos de autor

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<p>
 				Lorem, ipsum dolor.
 			</p>
-			<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fes%2Fimages%2Fsearch%2Fle%25C3%25B3n%2F&psig=AOvVaw0dsYYdNO7PcuOtuQozmtNo&ust=1681820055014000&source=images&cd=vfe&ved=0CA4QjRxqFwoTCODCvJTysP4CFQAAAAAdAAAAABAD" alt="Loenfacha">
+			<img src="./leon.webp" alt="leon blanco">
 		</section>
 		<section>
 			<!-- Compañero 2. Agregar un "h3", un "p" y un "img" -->
@@ -37,6 +37,9 @@
 	<footer>
 		<!-- Agregar sus nombre con el simbolo de copyright y el año -->
 		<!-- DEBEN QUEDAR LOS NOMBRES UNO A LADO DEL OTRO  -->
+		
+		 &copy; 2023 <i> Roda Sofia </i><i> Pietkiewicz Ivan </i><i> Liva David </i>
+		 
 	</footer>
 </body>
 </html>
