se agregó un icono de leon, una cabecera a la página

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 	<meta charset="UTF-8">
 	<title>Título de la página</title>
 	<link rel="stylesheet" href="./style.css">
+	<link rel="icon" href="https://imgs.search.brave.com/kdf9eW-JSOQUsaDr6YaSphftKbithK5qwXt1QOzc_aw/rs:fit:1200:630:1/g:ce/aHR0cHM6Ly9sYXZl/cmRhZG5vdGljaWFz/LmNvbS9fX2V4cG9y/dC8xNTUyOTQxMDIy/MDMwL3NpdGVzL2xh/dmVyZGFkL2ltZy8y/MDE5LzAzLzE4L3dh/bGxwYXBlci1uYXR1/cmFsZXphLTI1NjB4/MTYwMC0xNzM1LTlj/ZDM1ZTU0LmpwZ182/NzM4MjI2NzcuanBn">
 </head>
 <body>
 	<header>
 		<!-- Agrega aquí el logo y el título de la página -->
+		<h1>Planetas, León, Lluvia</h1>
+		<picture><img src="https://imgs.search.brave.com/tgiC1FJeHRQeZA4S_wm_jGcj4E4UpvOle73nhlf81cw/rs:fit:1200:1024:1/g:ce/aHR0cDovL2ltYWdl/bmVzLjRldmVyLmV1/L2RhdGEvZG93bmxv/YWQvYW5pbWFkb3Mv/ZWwtYXJ0ZS1kaWdp/dGFsL3BsYW5ldGFz/LC11bml2ZXJzbywt/Y2llbmNpYS1maWNj/aW9uLTEyNDYwMi5q/cGc_bm8tbG9nbw" alt=""></picture>
 		<nav>
 			<ul>
 				<li><a href="#">Inicio</a></li>
