se agrego un section nueva con p, h3 y una imagen

--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
 			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima illum repudiandae cum nemo magnam eius nostrum iste voluptates quod numquam, atque quisquam voluptas quae nisi deleniti ipsa natus ut suscipit!</p>
 			<img src="https://imgs.search.brave.com/kJUKFrruTKNxlOMFcySihEJ5xjHaVUYU5tFTZFqe4NQ/rs:fit:1200:1075:1/g:ce/aHR0cHM6Ly9zdXBl/cmN1cmlvc28uY29t/L3dwLWNvbnRlbnQv/dXBsb2Fkcy8yMDE2/LzAyL3NwaGVyaWNh/bF93YXRlcl9kcm9w/LUhELUNvcHkuanBn" alt="GotaGotaGotaGotaGotaGotaGotaGotaGota">
 		</section>
+		<section>
+			<h3>leon negro</h3>
+			<p>
+			De acuerdo a este estudio científico, publicado en la revista New Scientist,
+			los leones etíopes tienen una melena oscura distintiva, que cubre la cabeza, 
+			el cuello, el pecho y el vientre.Esto explica por qué los leones de Etiopía son llamados leones negros.
+		    </p>
+			<img src="https://imgs.search.brave.com/Mva6mzy3zRXH8kZpyjFSQ8jpPQmykM1tH2nP4amlQ7U/rs:fit:480:360:1/g:ce/aHR0cHM6Ly9pLnl0/aW1nLmNvbS92aS9F/SzRCMVpZM2prdy9o/cWRlZmF1bHQuanBn" alt="leon negro">
+
+
+
+
+		</section>
 	</main>
 	<footer>
 		<!-- Agregar sus nombre con el simbolo de copyright y el año -->
