--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 				<li><a href="#">Contacto</a></li>
 			</ul>
 		</nav>
-		<h1>Planetas, León, Lluvia</h1>
-		<picture><img src="https://imgs.search.brave.com/tgiC1FJeHRQeZA4S_wm_jGcj4E4UpvOle73nhlf81cw/rs:fit:1200:1024:1/g:ce/aHR0cDovL2ltYWdl/bmVzLjRldmVyLmV1/L2RhdGEvZG93bmxv/YWQvYW5pbWFkb3Mv/ZWwtYXJ0ZS1kaWdp/dGFsL3BsYW5ldGFz/LC11bml2ZXJzbywt/Y2llbmNpYS1maWNj/aW9uLTEyNDYwMi5q/cGc_bm8tbG9nbw" alt=""></picture>
+		
+		<picture class="padre-cabecera">
+			<img class="cabecera" src="https://imgs.search.brave.com/tgiC1FJeHRQeZA4S_wm_jGcj4E4UpvOle73nhlf81cw/rs:fit:1200:1024:1/g:ce/aHR0cDovL2ltYWdl/bmVzLjRldmVyLmV1/L2RhdGEvZG93bmxv/YWQvYW5pbWFkb3Mv/ZWwtYXJ0ZS1kaWdp/dGFsL3BsYW5ldGFz/LC11bml2ZXJzbywt/Y2llbmNpYS1maWNj/aW9uLTEyNDYwMi5q/cGc_bm8tbG9nbw" alt="">
+			<h1>Planetas, León, Lluvia</h1>	
+		</picture>
 		
 	</header>
 	<main>
