--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="icon" href="https://imgs.search.brave.com/kdf9eW-JSOQUsaDr6YaSphftKbithK5qwXt1QOzc_aw/rs:fit:1200:630:1/g:ce/aHR0cHM6Ly9sYXZl/cmRhZG5vdGljaWFz/LmNvbS9fX2V4cG9y/dC8xNTUyOTQxMDIy/MDMwL3NpdGVzL2xh/dmVyZGFkL2ltZy8y/MDE5LzAzLzE4L3dh/bGxwYXBlci1uYXR1/cmFsZXphLTI1NjB4/MTYwMC0xNzM1LTlj/ZDM1ZTU0LmpwZ182/NzM4MjI2NzcuanBn">
 </head>
 <body>
-	<header>
+	<header class="editHeader">
 		<!-- Agrega aquí el logo y el título de la página -->
 		<nav>
 			<ul>
